--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,7 @@ add_subdirectory(dfg)
 add_subdirectory(hardware-modeler)
 add_subdirectory(mapper)
 
-add_llvm_executable(cgra-tool
+add_executable(cgra-tool
     CGRAMapper.cpp
 )
 
@@ -10,6 +10,11 @@ target_link_libraries(cgra-tool
     PUBLIC hardware-modeler
     PUBLIC dfg
     PUBLIC mapper
+    PUBLIC LLVMSupport 
+    PUBLIC LLVMPasses 
+    PUBLIC LLVMCore 
+    PUBLIC LLVMIRReader
+    PUBLIC LLVMCodeGen
 )
 
 if(BUILD_LLVM_PASSES)
