--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ project(CGRA-Tool
 # set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 # include(CPack)
 
-# whether to compile LLVM pass plugin (default: on)
+# whether to compile LLVM pass plugin (default: OFF)
 set (BUILD_LLVM_PASSES OFF)
 set (CMAKE_CXX_STANDARD 20)
 set (BUILD_SHARED_LIBS ON)
