--- a/src/dfg/CMakeLists.txt
+++ b/src/dfg/CMakeLists.txt
@@ -1,5 +1,13 @@
-add_llvm_library(dfg
+add_library(dfg OBJECT
     DFG.cpp
     DFGNode.cpp
     DFGEdge.cpp
+)
+
+target_link_libraries(dfg
+    PUBLIC LLVMSupport 
+    PUBLIC LLVMPasses 
+    PUBLIC LLVMCore 
+    PUBLIC LLVMIRReader
+    PUBLIC LLVMCodeGen
 )
